[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Gun.png" type="Texture" id=1]
[ext_resource path="res://Assets/GunShoot.png" type="Texture" id=2]
[ext_resource path="res://Player/Gun.gd" type="Script" id=3]
[ext_resource path="res://Assets/wall.wav" type="AudioStream" id=4]

[node name="Gun" type="Spatial"]
script = ExtResource( 3 )

[node name="Idle" type="Sprite3D" parent="."]
transform = Transform( 0.984808, -0.173648, 0, 0.173648, 0.984808, 0, 0, 0, 1, 0, 0, 0 )
pixel_size = 0.001
texture = ExtResource( 1 )

[node name="Shoot" type="Sprite3D" parent="."]
transform = Transform( 0.983108, -0.183025, 0, 0.183025, 0.983108, 0, 0, 0, 1, 0, 0, 0 )
visible = false
pixel_size = 0.001
texture = ExtResource( 2 )

[node name="Gunshot" type="AudioStreamPlayer" parent="Shoot"]
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 0.4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_SpinTimer_timeout"]
